[gd_scene load_steps=14 format=3 uid="uid://b22yup87gus65"]

[ext_resource type="Script" path="res://ships/spaceship_2.gd" id="1_jqm56"]
[ext_resource type="PackedScene" uid="uid://bpbnpe1p4jf3j" path="res://ships/gun.tscn" id="2_libnk"]
[ext_resource type="ArrayMesh" uid="uid://cq5wqspt3i63s" path="res://ship_meshes/MicroRecon_Mesh.res" id="2_t1xew"]
[ext_resource type="PackedScene" uid="uid://bb5cfb1ykc0wr" path="res://detect_player_component.tscn" id="4_iv4h5"]
[ext_resource type="PackedScene" uid="uid://dvb80kv17x16k" path="res://velocity_component.tscn" id="4_jhxgk"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_n6so8"]
points = PackedVector3Array(-0.2, -0.692063, -0.322954, 0.1, 1.01028, 0.144177, 0.199856, 0.941809, 0.144, -0.399801, -0.644428, 0.444, 1.21905, 0.125053, -0.146409, -1.10473, 0.277456, -0.375048, 0.399801, -0.644428, 0.444, 1.10473, 0.277456, -0.375048, 0.228392, -1.17015, -0.0702782, -1.21905, 0.125053, -0.146409, -0.228392, -1.17015, -0.0702782, -0.1, 0.77639, 0.311089, -0.1, 0.943486, -0.156353, 0.914286, 0.125053, 0.158278, -0.914286, 0.125053, 0.158278, -0.199856, 0.941809, 0.144, 0.228392, -1.17015, 0.0820654, 1.10473, 0.125053, -0.375048, 0.1, 0.77639, 0.311089, -1.10473, 0.125053, -0.375048, 0.418839, -0.52232, 0.463048, -0.228392, -1.17015, 0.0820654, -0.418839, -0.52232, 0.463048, 0.2, -0.692063, -0.322954, 0.1, 0.843189, -0.223089, 0.1, 0.943486, -0.156353, -0.1, 1.01028, 0.0106318, -0.0998238, 0.941809, 0.244, 0.1, 1.01028, 0.0106318, 0.0998238, 0.941809, 0.244, -1.0972, 0.2489, -0.127377, 1.0972, 0.2489, -0.127377)

[sub_resource type="GDScript" id="GDScript_30ptj"]
script/source = "extends Area3D

var direction := Vector2(0, 1)
var _motion := Vector3.ZERO


func _ready():
	($velocity_component as VelocityComponent).direction = direction
	await get_tree().physics_frame
	if not $VisibleOnScreenNotifier3D.is_on_screen():
		_on_screen_exited()

func _physics_process(delta):
	global_position += _motion * delta


func _on_velocity_changed(new_velocity, acceleration):
	_motion = Vector3(new_velocity.x, new_velocity.y, 0)


func _on_screen_exited():
	queue_free()
"

[sub_resource type="Gradient" id="Gradient_b34a6"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.397594, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5yki8"]
gradient = SubResource("Gradient_b34a6")
width = 11
height = 11

[sub_resource type="Gradient" id="Gradient_w541r"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.277528, 0.277528, 0.277528, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3eev5"]
gradient = SubResource("Gradient_w541r")
width = 16
height = 32

[sub_resource type="PackedScene" id="PackedScene_b3pm4"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(1073741831, 1073741830, 26, 25, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("RocketBullet", "Area3D", "script", "CollisionPolygon3D", "CollisionPolygon3D", "polygon", "VisibleOnScreenNotifier3D", "VisibleOnScreenNotifier3D", "transform", "aabb", "Visuals", "Node3D", "Head", "Sprite3D", "transform", "texture", "Body", "Sprite3D", "offset", "texture", "velocity_component", "speed", "acceleration_factor", "acceleration_easing", "deceleration_easing", "_on_velocity_changed", "velocity_changed"),
"node_count": 7,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("./Visuals"), NodePath("./Visuals"), NodePath("."), NodePath("."), NodePath("velocity_component")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 1, 2, 0, 0, 1073741824, 0, 4, 3, -1, 1, 5, 1, 0, 1073741825, 0, 7, 6, -1, 2, 8, 2, 9, 3, 0, 1073741826, 0, 11, 10, -1, 0, 0, 1073741827, 0, 13, 12, -1, 2, 14, 4, 15, 5, 0, 1073741828, 0, 17, 16, -1, 2, 18, 6, 19, 7, 0, 1073741829, 0, 2147483647, 20, 8, 4, 21, 9, 22, 10, 23, 11, 24, 12, 0),
"variants": [SubResource("GDScript_30ptj"), PackedVector2Array(0.000245571, 0.400491, 0.079622, 0.319865, 0.0801641, -0.000877231, -0.0791751, 0.000351772, -0.0801346, 0.319385), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.200053, 0), AABB(-0.0812548, -0.191849, -1, 0.16251, 0.383699, 2), Transform3D(0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0, 0.320501, -0.0143433), SubResource("GradientTexture2D_5yki8"), Vector2(0, 16), SubResource("GradientTexture2D_3eev5"), ExtResource("4_jhxgk"), 10.0, 1.0, 2.20436, 1e-05],
"version": 3
}

[sub_resource type="BoxShape3D" id="BoxShape3D_1752p"]
size = Vector3(0.25, 100, 1)

[node name="Spaceship2" type="CharacterBody3D"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("1_jqm56")

[node name="MicroReconMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_t1xew")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_n6so8")

[node name="GunLeft" parent="." instance=ExtResource("2_libnk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0903066, 0.0452696, 0)
bullet_scene = SubResource("PackedScene_b3pm4")

[node name="GunRight" parent="." instance=ExtResource("2_libnk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.09, 0.045, 0)
bullet_scene = SubResource("PackedScene_b3pm4")

[node name="detect_player_component" parent="." instance=ExtResource("4_iv4h5")]

[node name="CollisionShape3D" parent="detect_player_component/Area3D" index="0"]
shape = SubResource("BoxShape3D_1752p")

[connection signal="player_detected" from="detect_player_component" to="." method="_on_player_detected"]
[connection signal="player_lost" from="detect_player_component" to="." method="_on_player_detected"]

[editable path="GunLeft"]
[editable path="GunRight"]
[editable path="detect_player_component"]
